[package]
name = "play-async"
version = "0.1.0"
edition = "2021"


[[bin]] # Hello world Client
name = "hw"
path = "src/hello_world.rs"

[[bin]] # Echo
name = "echo"
path = "src/echo.rs"

[[bin]] # Echo UDP
name = "echo-udp"
path = "src/echo-udp.rs"

[[bin]] # UDP Client
name = "udp-client"
path = "src/udp-client.rs"

[[bin]] # Connect
name = "connect"
path = "src/connect.rs"


[dependencies]
tokio = { version = "1.42", features = ["full"] }
futures = { version = "0.3", features = ["thread-pool"]}
tokio-util = { version = "0.7", features = ["full"] }
bytes = "1.0"
