[package]
name = "play-async"
version = "0.1.0"
edition = "2021"

[[bin]] # Echo
name = "echo"
path = "src/echo.rs"

[[bin]] # Echo UDP
name = "echo-udp"
path = "src/echo-udp.rs"

[[bin]] # UDP Client
name = "udp-client"
path = "src/udp-client.rs"

[[bin]] # Connect
name = "connect"
path = "src/connect.rs"

[[bin]] # Proxy
name = "proxy"
path = "src/proxy.rs"

[[bin]] # key-value storage
name = "key-value-storage"
path = "src/key-value-storage.rs"

[[bin]] # chat
name = "chat"
path = "src/chat.rs"

[[bin]] # samples
name = "samples"
path = "src/samples.rs"

[[bin]] # mini-redis-client
name = "minic"
path = "src/mini-redis-client.rs"

[[bin]] # mini-redis-server
name = "minis"
path = "src/mini-redis-server.rs"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tokio-stream = "0.1"
futures = { version = "0.3", features = ["thread-pool"]}
bytes = "1.0"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"] }
tracing= "0.1"
mini-redis= "0.4"

