[package]
name = "play-async"
version = "0.1.0"
edition = "2021"


[[bin]] # chat server
name = "chat"
path = "src/chat.rs"

[[bin]] # key-value storage
name = "key-value-storage"
path = "src/key-value-storage.rs"

[[bin]] # proxy server
name = "proxy"
path = "src/proxy.rs"

[[bin]] # samples
name = "samples"
path = "src/samples.rs"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tokio-stream = "0.1"
futures = { version = "0.3", features = ["thread-pool"]}
bytes = "1.0"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"] }
tracing= "0.1"
mini-redis= "0.4"

